--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-html-parser": "^1.2.20",
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
+    "random-js": "^2.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
