--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "bootstrap-switch-button-react": "^1.2.0",
     "firebase": "^7.19.1",
     "node-html-parser": "^1.2.20",
     "node-sass": "^4.14.1",
@@ -19,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-favicon": "0.0.18",
     "react-helmet-async": "^1.0.6",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
