--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "bootstrap-switch-button-react": "^1.2.0",
     "firebase": "^7.19.1",
     "node-html-parser": "^1.2.20",
-    "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "random-js": "^2.1.0",
     "react": "^16.13.1",
@@ -22,12 +21,13 @@
     "react-helmet-async": "^1.0.6",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "sass": "^1.56.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy":"firebase deploy"
+    "deploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
